@@ -19,6 +19,7 @@
  * @author Tobias Achterberg
  * @author Timo Berthold
  * @author Gerald Gamrath
+ * @author Marc Pfetsch
  */
 
 /*---+----1----+----2----+----3----+----4----+----5----+----6----+----7----+----8----+----9----+----0----+----1----+----2*/
@@ -48,6 +49,8 @@
 #include "scip/scip_solvingstats.h"
 #include "scip/scip_tree.h"
 #include "scip/scip_var.h"
+#include "scip/prop_symmetry.h"
+#include "scip/symmetry.h"
 #include <string.h>
 
 #define BRANCHRULE_NAME          "relpscost"
@@ -91,6 +94,10 @@
                                               *   infeasible and objective leaf counters? */
 #define DEFAULT_DEGENERACYAWARE  1           /**< should degeneracy be taken into account to update weights and skip strong branching? (0: off, 1: after root, 2: always)*/
 
+/* symmetry handling */
+#define DEFAULT_FILTERCANDSSYM   FALSE       /**< Use symmetry to filter branching candidates? */
+#define DEFAULT_TRANSSYMPSCOST   FALSE       /**< Transfer pscost information to symmetric variables? */
+
 /** branching rule data */
 struct SCIP_BranchruleData
 {
@@ -133,11 +140,227 @@ struct SCIP_BranchruleData
    SCIP_RANDNUMGEN*      randnumgen;         /**< random number generator */
    int                   startrandseed;      /**< start random seed for random number generation */
    SCIP_Bool             usesmallweightsitlim; /**< should smaller weights be used for pseudo cost updates after hitting the LP iteration limit? */
+
+   /* for symmetry */
+   SCIP_Bool             filtercandssym;     /**< Use symmetry to filter branching candidates? */
+   SCIP_Bool             transsympscost;     /**< Transfer pscost information to symmetric variables? */
+
+   SCIP_Bool             nosymmetry;         /**< No symmetry present? */
+   int*                  orbits;             /**< array of non-trivial orbits */
+   int*                  orbitbegins;        /**< array containing begin positions of new orbits in orbits array */
+   int                   norbits;            /**< pointer to number of orbits currently stored in orbits */
+   int*                  varorbitmap;        /**< array for storing the orbits for each variable */
+   int*                  orbitrep;           /**< representative variable of each orbit */
+   SCIP_VAR**            permvars;           /**< variables on which permutations act */
+   int                   npermvars;          /**< number of variables for permutations */
+   SCIP_HASHMAP*         permvarmap;         /**< map of variables to indices in permvars array */
 };
 
 /*
  * local methods
  */
+
+/** initialize orbits */
+static
+SCIP_RETCODE initOrbits(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_BRANCHRULEDATA*  branchruledata      /**< branching rule data */
+   )
+{
+   int** permstrans = NULL;
+   int* components = NULL;
+   int* componentbegins = NULL;
+   int* vartocomponent = NULL;
+   int ncomponents = 0;
+   int nperms = -1;
+
+   assert( scip != NULL );
+   assert( branchruledata != NULL );
+   assert( branchruledata->filtercandssym );
+
+   /* exit if no symmetry or orbits already available */
+   if( branchruledata->nosymmetry || branchruledata->orbits != NULL )
+      return SCIP_OKAY;
+
+   assert( branchruledata->orbitbegins ==  NULL );
+   assert( branchruledata->varorbitmap == NULL );
+   assert( branchruledata->orbitrep == NULL );
+
+   /* obtain symmetry including permutations */
+   SCIP_CALL( SCIPgetSymmetry(scip, &branchruledata->npermvars, &branchruledata->permvars, &branchruledata->permvarmap,
+         &nperms, NULL, &permstrans, NULL, NULL, &components, &componentbegins, &vartocomponent, &ncomponents) );
+
+   /* turn off symmetry handling if there is no symmetry or the number of variables is not equal */
+   if( nperms <= 0 || branchruledata->npermvars != SCIPgetNVars(scip) )
+   {
+      branchruledata->nosymmetry = TRUE;
+      return SCIP_OKAY;
+   }
+   assert( branchruledata->permvars != NULL );
+   assert( branchruledata->permvarmap != NULL );
+   assert( branchruledata->npermvars > 0 );
+   assert( permstrans != NULL );
+   assert( components != NULL );
+   assert( componentbegins != NULL );
+   assert( vartocomponent != NULL );
+   assert( ncomponents > 0 );
+
+   SCIP_CALL( SCIPallocBlockMemoryArray(scip, &branchruledata->orbits, branchruledata->npermvars) );
+   SCIP_CALL( SCIPallocBlockMemoryArray(scip, &branchruledata->orbitbegins, branchruledata->npermvars) );
+   SCIP_CALL( SCIPallocBlockMemoryArray(scip, &branchruledata->varorbitmap, branchruledata->npermvars) );
+   SCIP_CALL( SCIPallocBlockMemoryArray(scip, &branchruledata->orbitrep, branchruledata->npermvars) );
+
+   /* Compute orbits on all variables, since this might help for branching and this computation is only done once. */
+   SCIP_CALL( SCIPcomputeOrbitsComponentsSym(scip, branchruledata->npermvars, permstrans, nperms,
+         components, componentbegins, vartocomponent, ncomponents,
+         branchruledata->orbits, branchruledata->orbitbegins, &branchruledata->norbits, branchruledata->varorbitmap) );
+   assert( branchruledata->norbits < branchruledata->npermvars );
+
+   return SCIP_OKAY;
+}
+
+/** filter out symmetric variables from branching variables */
+static
+SCIP_RETCODE filterSymmetricVariables(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_BRANCHRULEDATA*  branchruledata,     /**< branching rule data */
+   SCIP_VAR**            origbranchcands,    /**< original branching candidates */
+   SCIP_Real*            origbranchcandssol, /**< original solution value for the branching candidates */
+   SCIP_Real*            origbranchcandsfrac,/**< original fractional part of the branching candidates */
+   int                   norigbranchcands,   /**< original number of branching candidates */
+   SCIP_VAR**            branchcands,        /**< branching candidates */
+   SCIP_Real*            branchcandssol,     /**< solution value for the branching candidates */
+   SCIP_Real*            branchcandsfrac,    /**< fractional part of the branching candidates */
+   int*                  branchorbitidx,     /**< array of indices of orbit of branching candidates */
+   int*                  nbranchcands        /**< pointer to store number of branching candidates */
+   )
+{
+   int i;
+
+   assert( scip != NULL );
+   assert( branchruledata != NULL );
+   assert( origbranchcands != NULL );
+   assert( origbranchcandssol != NULL );
+   assert( origbranchcandsfrac != NULL );
+   assert( branchcands != NULL );
+   assert( branchcandssol != NULL );
+   assert( branchcandsfrac != NULL );
+   assert( nbranchcands != NULL );
+
+   assert( ! branchruledata->nosymmetry );
+   assert( branchruledata->orbitbegins != NULL );
+   assert( branchruledata->orbits != NULL );
+   assert( branchruledata->permvarmap != NULL );
+   assert( branchruledata->varorbitmap != NULL );
+   assert( branchruledata->orbitrep != NULL );
+   assert( branchruledata->norbits < branchruledata->npermvars );
+
+   /* init representatives (used to see whether variable is the first in an orbit) */
+   for(i = 0; i < branchruledata->norbits; ++i)
+      branchruledata->orbitrep[i] = -1;
+
+   /* loop through branching variables, determine orbit and whether they are the first ones */
+   *nbranchcands = 0;
+   for(i = 0; i < norigbranchcands; ++i)
+   {
+      int orbitidx = -1;
+      int varidx = -1;
+
+      if( SCIPhashmapExists(branchruledata->permvarmap, (void*) origbranchcands[i]) )
+      {
+         varidx = SCIPhashmapGetImageInt(branchruledata->permvarmap, (void*) origbranchcands[i]);
+         assert( 0 <= varidx && varidx < branchruledata->npermvars );
+         orbitidx = branchruledata->varorbitmap[varidx];
+      }
+      assert( -1 <= orbitidx && orbitidx < branchruledata->norbits );
+
+      /* Check whether the variable is not present (can happen if variable was added after computing symmetries or is in
+       * a singleton orbit). */
+      if( orbitidx == -1 )
+      {
+         branchcands[*nbranchcands] = origbranchcands[i];
+         branchcandssol[*nbranchcands] = origbranchcandssol[i];
+         branchcandsfrac[*nbranchcands] = origbranchcandsfrac[i];
+         branchorbitidx[*nbranchcands] = -1;
+         ++(*nbranchcands);
+      }
+      else if( branchruledata->orbitrep[orbitidx] == -1 )
+      {
+         /* if variable is the first in a nontrivial orbit */
+         assert( 0 <= varidx && varidx < branchruledata->npermvars );
+         branchruledata->orbitrep[orbitidx] = varidx;
+         branchcands[*nbranchcands] = origbranchcands[i];
+         branchcandssol[*nbranchcands] = origbranchcandssol[i];
+         branchcandsfrac[*nbranchcands] = origbranchcandsfrac[i];
+         branchorbitidx[*nbranchcands] = orbitidx;
+         ++(*nbranchcands);
+      }
+   }
+
+   SCIPdebugMsg(scip, "Filtered out %d variables by symmetry.\n", norigbranchcands - *nbranchcands);
+
+   return SCIP_OKAY;
+}
+
+/** updates the pseudo costs of the given variable and all its symmetric variables */
+static
+SCIP_RETCODE SCIPupdateVarPseudocostSymmetric(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_BRANCHRULEDATA*  branchruledata,     /**< branching rule data */
+   SCIP_VAR*             branchvar,          /**< branching variable candidate */
+   int*                  branchorbitidx,     /**< array of orbit indices */
+   int                   branchvaridx,       /**< index of variable in branchorbitidx */
+   SCIP_Real             solvaldelta,        /**< difference of variable's new LP value - old LP value */
+   SCIP_Real             objdelta,           /**< difference of new LP's objective value - old LP's objective value */
+   SCIP_Real             weight              /**< weight in (0,1] of this update in pseudo cost sum */
+   )
+{
+   int orbitidx;
+   int j;
+
+   assert( scip != NULL );
+   assert( branchruledata != NULL );
+
+   if( branchruledata->nosymmetry || ! branchruledata->transsympscost || branchorbitidx == NULL )
+   {
+      /* use original update function */
+      SCIP_CALL( SCIPupdateVarPseudocost(scip, branchvar, solvaldelta, objdelta, weight) );
+      return SCIP_OKAY;
+   }
+
+   assert( branchruledata->orbitbegins != NULL );
+   assert( branchruledata->orbits != NULL );
+   assert( 0 <= branchvaridx && branchvaridx < branchruledata->npermvars );
+
+   orbitidx = branchorbitidx[branchvaridx];
+   if( orbitidx < 0 )
+   {
+      /* only update given variable */
+      SCIP_CALL( SCIPupdateVarPseudocost(scip, branchvar, solvaldelta, objdelta, weight) );
+      return SCIP_OKAY;
+   }
+   assert( 0 <= orbitidx && orbitidx < branchruledata->norbits );
+
+   /* loop through orbit containing variable and update pseudo costs for all variables */
+   for(j = branchruledata->orbitbegins[orbitidx]; j < branchruledata->orbitbegins[orbitidx+1]; ++j)
+   {
+      SCIP_VAR* var;
+      int idx;
+
+      idx = branchruledata->orbits[j];
+      assert( 0 <= idx && idx < branchruledata->npermvars );
+
+      var = branchruledata->permvars[idx];
+      assert( var != NULL );
+
+      if( SCIPvarIsActive(var) )
+      {
+         SCIP_CALL( SCIPupdateVarPseudocost(scip, var, solvaldelta, objdelta, weight) );
+      }
+   }
+
+   return SCIP_OKAY;
+}
 
 /**! [SnippetCodeStyleStaticAsserts] */
 
@@ -531,6 +754,7 @@ SCIP_RETCODE execRelpscost(
    SCIP_VAR**            branchcands,        /**< branching candidates */
    SCIP_Real*            branchcandssol,     /**< solution value for the branching candidates */
    SCIP_Real*            branchcandsfrac,    /**< fractional part of the branching candidates */
+   int*                  branchorbitidx,     /**< indices of orbit (or NULL) */
    int                   nbranchcands,       /**< number of branching candidates */
    SCIP_Bool             executebranch,      /**< execute a branching step or run probing only */
    SCIP_RESULT*          result              /**< pointer to the result of the execution */
@@ -1217,7 +1441,7 @@ SCIP_RETCODE execRelpscost(
                weight = 1.0;
 
             /* update pseudo cost values */
-            SCIP_CALL( SCIPupdateVarPseudocost(scip, branchcands[c], 0.0 - branchcandsfrac[c], downgain, weight) );
+            SCIP_CALL( SCIPupdateVarPseudocostSymmetric(scip, branchruledata, branchcands[c], branchorbitidx, c, 0.0 - branchcandsfrac[c], downgain, weight) );
          }
          if( !upinf
 #ifdef WITH_LPSOLSTAT
@@ -1233,7 +1457,8 @@ SCIP_RETCODE execRelpscost(
             else
                weight = 1.0;
 
-            SCIP_CALL( SCIPupdateVarPseudocost(scip, branchcands[c], 1.0 - branchcandsfrac[c], upgain, weight) );
+            /* update pseudo cost values */
+            SCIP_CALL( SCIPupdateVarPseudocostSymmetric(scip, branchruledata, branchcands[c], branchorbitidx, c, 1.0 - branchcandsfrac[c], upgain, weight) );
          }
 
          /* the minimal lower bound of both children is a proved lower bound of the current subtree */
@@ -1569,6 +1794,16 @@ SCIP_DECL_BRANCHEXITSOL(branchExitsolRelpscost)
    /* free random number generator */
    SCIPfreeRandom(scip, &branchruledata->randnumgen);
 
+   SCIPfreeBlockMemoryArrayNull(scip, &branchruledata->orbitrep, branchruledata->npermvars);
+   SCIPfreeBlockMemoryArrayNull(scip, &branchruledata->varorbitmap, branchruledata->npermvars);
+   SCIPfreeBlockMemoryArrayNull(scip, &branchruledata->orbits, branchruledata->npermvars);
+   SCIPfreeBlockMemoryArrayNull(scip, &branchruledata->orbitbegins, branchruledata->npermvars);
+   branchruledata->nosymmetry = FALSE;
+   branchruledata->norbits = 0;
+   branchruledata->permvars = NULL;
+   branchruledata->permvarmap = NULL;
+   branchruledata->npermvars = 0;
+
    return SCIP_OKAY;
 }
 
@@ -1577,12 +1812,17 @@ SCIP_DECL_BRANCHEXITSOL(branchExitsolRelpscost)
 static
 SCIP_DECL_BRANCHEXECLP(branchExeclpRelpscost)
 {  /*lint --e{715}*/
-   SCIP_VAR** tmplpcands;
+   SCIP_BRANCHRULEDATA* branchruledata;
    SCIP_VAR** lpcands;
-   SCIP_Real* tmplpcandssol;
    SCIP_Real* lpcandssol;
-   SCIP_Real* tmplpcandsfrac;
    SCIP_Real* lpcandsfrac;
+   SCIP_VAR** filteredlpcands;
+   SCIP_Real* filteredlpcandssol;
+   SCIP_Real* filteredlpcandsfrac;
+   SCIP_Bool runfiltering;
+   SCIP_Bool allocated = FALSE;
+   int* filteredlpcandsorbitidx = NULL;
+   int nfilteredlpcands;
    int nlpcands;
 
    assert(branchrule != NULL);
@@ -1601,22 +1841,63 @@ SCIP_DECL_BRANCHEXECLP(branchExeclpRelpscost)
    }
 
    /* get branching candidates */
-   SCIP_CALL( SCIPgetLPBranchCands(scip, &tmplpcands, &tmplpcandssol, &tmplpcandsfrac, NULL, &nlpcands, NULL) );
+   SCIP_CALL( SCIPgetLPBranchCands(scip, &lpcands, &lpcandssol, &lpcandsfrac, NULL, &nlpcands, NULL) );
    assert(nlpcands > 0);
 
-   /* copy LP banching candidates and solution values, because they will be updated w.r.t. the strong branching LP
-    * solution
-    */
-   SCIP_CALL( SCIPduplicateBufferArray(scip, &lpcands, tmplpcands, nlpcands) );
-   SCIP_CALL( SCIPduplicateBufferArray(scip, &lpcandssol, tmplpcandssol, nlpcands) );
-   SCIP_CALL( SCIPduplicateBufferArray(scip, &lpcandsfrac, tmplpcandsfrac, nlpcands) );
+   branchruledata = SCIPbranchruleGetData(branchrule);
+   assert(branchruledata != NULL);
+
+   /* determine whether we should run filtering */
+   runfiltering = ! branchruledata->nosymmetry && branchruledata->filtercandssym && SCIPgetSubscipDepth(scip) == 0 && ! SCIPinDive(scip) && ! SCIPinProbing(scip);
+
+   /* init orbits if necessary */
+   if( runfiltering )
+   {
+      SCIP_CALL( initOrbits(scip, branchruledata) );
+   }
+
+   /* determine fractional variables (possibly filter by using symmetries) */
+   if( runfiltering )
+   {
+      /* if no symmetry is left then use all fractional variables */
+      if( branchruledata->norbits == 0 )
+      {
+         filteredlpcands = lpcands;
+         filteredlpcandssol = lpcandssol;
+         filteredlpcandsfrac = lpcandsfrac;
+         nfilteredlpcands = nlpcands;
+      }
+      else
+      {
+         SCIP_CALL( SCIPallocBufferArray(scip, &filteredlpcands, nlpcands) );
+         SCIP_CALL( SCIPallocBufferArray(scip, &filteredlpcandssol, nlpcands) );
+         SCIP_CALL( SCIPallocBufferArray(scip, &filteredlpcandsfrac, nlpcands) );
+         SCIP_CALL( SCIPallocBufferArray(scip, &filteredlpcandsorbitidx, nlpcands) );
+         allocated = TRUE;
+
+         /* determine filtered fractional variables */
+         SCIP_CALL( filterSymmetricVariables(scip, branchruledata, lpcands, lpcandssol, lpcandsfrac, nlpcands,
+               filteredlpcands, filteredlpcandssol, filteredlpcandsfrac, filteredlpcandsorbitidx, &nfilteredlpcands) );
+      }
+   }
+   else
+   {
+      filteredlpcands = lpcands;
+      filteredlpcandssol = lpcandssol;
+      filteredlpcandsfrac = lpcandsfrac;
+      nfilteredlpcands = nlpcands;
+   }
 
    /* execute branching rule */
-   SCIP_CALL( execRelpscost(scip, branchrule, lpcands, lpcandssol, lpcandsfrac, nlpcands, TRUE, result) );
+   SCIP_CALL( execRelpscost(scip, branchrule, filteredlpcands, filteredlpcandssol, filteredlpcandsfrac, filteredlpcandsorbitidx, nfilteredlpcands, TRUE, result) );
 
-   SCIPfreeBufferArray(scip, &lpcandsfrac);
-   SCIPfreeBufferArray(scip, &lpcandssol);
-   SCIPfreeBufferArray(scip, &lpcands);
+   if( allocated )
+   {
+      SCIPfreeBufferArray(scip, &filteredlpcandsorbitidx);
+      SCIPfreeBufferArray(scip, &filteredlpcandsfrac);
+      SCIPfreeBufferArray(scip, &filteredlpcandssol);
+      SCIPfreeBufferArray(scip, &filteredlpcands);
+   }
 
    return SCIP_OKAY;
 }
@@ -1636,6 +1917,16 @@ SCIP_RETCODE SCIPincludeBranchruleRelpscost(
 
    /* create relpscost branching rule data */
    SCIP_CALL( SCIPallocBlockMemory(scip, &branchruledata) );
+
+   branchruledata->nosymmetry = FALSE;
+   branchruledata->orbits = NULL;
+   branchruledata->orbitbegins = NULL;
+   branchruledata->orbitrep = NULL;
+   branchruledata->varorbitmap = NULL;
+   branchruledata->norbits = 0;
+   branchruledata->permvars = NULL;
+   branchruledata->npermvars = 0;
+   branchruledata->permvarmap = NULL;
 
    /* include branching rule */
    SCIP_CALL( SCIPincludeBranchruleBasic(scip, &branchrule, BRANCHRULE_NAME, BRANCHRULE_DESC, BRANCHRULE_PRIORITY,
@@ -1780,6 +2071,14 @@ SCIP_RETCODE SCIPincludeBranchruleRelpscost(
    SCIP_CALL( SCIPaddIntParam(scip, "branching/relpscost/startrandseed", "start seed for random number generation",
          &branchruledata->startrandseed, TRUE, DEFAULT_STARTRANDSEED, 0, INT_MAX, NULL, NULL) );
 
+   SCIP_CALL( SCIPaddBoolParam(scip, "branching/relpscost/filtercandssym",
+         "Use symmetry to filter branching candidates?",
+         &branchruledata->filtercandssym, TRUE, DEFAULT_FILTERCANDSSYM, NULL, NULL) );
+
+   SCIP_CALL( SCIPaddBoolParam(scip, "branching/relpscost/transsympscost",
+         "Transfer pscost information to symmetric variables?",
+         &branchruledata->transsympscost, TRUE, DEFAULT_TRANSSYMPSCOST, NULL, NULL) );
+
    return SCIP_OKAY;
 }
 
@@ -1804,7 +2103,7 @@ SCIP_RETCODE SCIPexecRelpscostBranching(
    assert(branchrule != NULL);
 
    /* execute branching rule */
-   SCIP_CALL( execRelpscost(scip, branchrule, branchcands, branchcandssol, branchcandsfrac, nbranchcands, executebranching, result) );
+   SCIP_CALL( execRelpscost(scip, branchrule, branchcands, branchcandssol, branchcandsfrac, NULL, nbranchcands, executebranching, result) );
 
    return SCIP_OKAY;
 }
